<?xml version="1.0"?>
<package format="3">
  <name>ros_networktables_bridge_host</name>
  <version>0.0.0</version>
  <description>The ros_networktables_bridge_host package</description>
  <maintainer email="woz4tetra@gmail.com">woz4tetra</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rosbridge_library</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
</package>

